# ordnung

./: .gitattributes  .gitignore  CLAUDE.md  QT_MIGRATION.md  README.md  app.py  build.bat  converter.py  db.py  eyebags.spec  importer.py  index.html  logger.py  package-lock.json  package.json  paths.py  requirements.txt  run.bat  run.vbs  seed.py  vite.config.js  watcher.py
.github/workflows/: build.yml
ordnung-qt/: CMakeLists.txt  DESIGN_SPEC.md  dev.bat  dev.sh
ordnung-qt/docs/: DESIGN_SPEC.md  ROADMAP.md  SOUND_FILE_MANAGER.md
ordnung-qt/resources/: resources.qrc  theme.qss
ordnung-qt/src/: main.cpp
ordnung-qt/src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
ordnung-qt/src/commands/: BulkFormatCommand.cpp  BulkFormatCommand.h  DeleteTracksCommand.cpp  DeleteTracksCommand.h  UpdateFormatCommand.cpp  UpdateFormatCommand.h
ordnung-qt/src/core/: ConversionJob.h  CuePoint.h  Playlist.h  ServiceRegistry.h  Track.h
ordnung-qt/src/delegates/: FormatDelegate.cpp  FormatDelegate.h  StatusDelegate.cpp  StatusDelegate.h
ordnung-qt/src/models/: DownloadsModel.cpp  DownloadsModel.h  PlaylistModel.cpp  PlaylistModel.h  TrackModel.cpp  TrackModel.h
ordnung-qt/src/services/: AudioAnalyzer.cpp  AudioAnalyzer.h  Converter.cpp  Converter.h  Database.cpp  Database.h  EssentiaAnalyzer.cpp  EssentiaAnalyzer.h  ExportService.cpp  ExportService.h  FolderWatcher.cpp  FolderWatcher.h  LibraryScanner.cpp  LibraryScanner.h  M3UExporter.cpp  M3UExporter.h  PdbWriter.cpp  PdbWriter.h  PlaylistImporter.cpp  PlaylistImporter.h  WaveformGenerator.cpp  WaveformGenerator.h
ordnung-qt/src/style/: Theme.cpp  Theme.h
ordnung-qt/src/views/: AnalysisProgressDialog.cpp  AnalysisProgressDialog.h  BatchEditDialog.cpp  BatchEditDialog.h  CollectionTreePanel.cpp  CollectionTreePanel.h  CuePointEditor.cpp  CuePointEditor.h  DownloadsView.cpp  DownloadsView.h  DuplicateDetectorDialog.cpp  DuplicateDetectorDialog.h  ExportWizard.cpp  ExportWizard.h  FolderPanel.cpp  FolderPanel.h  LibraryView.cpp  LibraryView.h  MissingFilesDialog.cpp  MissingFilesDialog.h  PlayerBar.cpp  PlayerBar.h  PlaylistPanel.cpp  PlaylistPanel.h  TrackDetailPanel.cpp  TrackDetailPanel.h  TrackTableView.cpp  TrackTableView.h
ordnung-qt/src/views/table/: LibraryTableColumn.cpp  LibraryTableColumn.h  LibraryTableRow.h  LibraryTableRowPainter.cpp  LibraryTableRowPainter.h
scripts/: build-essentia-linux.sh  build-essentia-macos.sh  build-essentia-windows.sh  fetch-onnxruntime.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  db.rs  error.rs  importer.rs  lib.rs  main.rs  models.rs  watcher.rs
src-tauri/src/commands/: config.rs  conversions.rs  downloads.rs  mod.rs  playlists.rs  songs.rs
src/lib/: Downloads.svelte  Library.svelte  invoke.js  stores.svelte.js
src/lib/components/: ActivityLog.svelte  DownloadList.svelte  FolderFlow.svelte  GenreBar.svelte  PlaylistSidebar.svelte  TrackDetail.svelte  TrackList.svelte  TrackRow.svelte
static/: app.js  style.css
templates/: base.html
